testsuite/tests/name_resolution/xref_eq_aggregates_1/test.out
Analyzing simple_aggregate.adb
##############################

Resolving xrefs for node <AssignStmt simple_aggregate.adb:11:4-11:16>
*********************************************************************

Expr: <Id "R" simple_aggregate.adb:11:4-11:5>
  references:    <DefiningName "R" simple_aggregate.adb:7:4-7:5>
  type:          <ConcreteTypeDecl ["Rec"] simple_aggregate.adb:3:4-5:15>
  expected type: None
Expr: <Aggregate simple_aggregate.adb:11:9-11:15>
  type:          <ConcreteTypeDecl ["Rec"] simple_aggregate.adb:3:4-5:15>
  expected type: <ConcreteTypeDecl ["Rec"] simple_aggregate.adb:3:4-5:15>
Expr: <Int simple_aggregate.adb:11:10-11:11>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] __standard:116:3-116:45>
  expected type: <ConcreteTypeDecl ["Integer"] simple_aggregate.adb:2:4-2:34>
Expr: <Int simple_aggregate.adb:11:13-11:14>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] __standard:116:3-116:45>
  expected type: <ConcreteTypeDecl ["Integer"] simple_aggregate.adb:2:4-2:34>

Resolving xrefs for node <AssignStmt simple_aggregate.adb:14:4-14:18>
*********************************************************************

simple_aggregate.adb:14:13: error: expected Integer, got universal real
14 |    R := (1, 2.0);
   |             ^^^


Resolving xrefs for node <AssignStmt simple_aggregate.adb:17:4-17:18>
*********************************************************************

Expr: <Id "R" simple_aggregate.adb:17:4-17:5>
  references:    <DefiningName "R" simple_aggregate.adb:7:4-7:5>
  type:          <ConcreteTypeDecl ["Rec"] simple_aggregate.adb:3:4-5:15>
  expected type: None
Expr: <Aggregate simple_aggregate.adb:17:9-17:17>
  type:          <ConcreteTypeDecl ["Rec"] simple_aggregate.adb:3:4-5:15>
  expected type: <ConcreteTypeDecl ["Rec"] simple_aggregate.adb:3:4-5:15>
Expr: <Int simple_aggregate.adb:17:10-17:11>
  references:    None
  type:          <ConcreteTypeDecl ["Universal_Int_Type_"] __standard:116:3-116:45>
  expected type: <ConcreteTypeDecl ["Integer"] simple_aggregate.adb:2:4-2:34>
Expr: <Id "Foo" simple_aggregate.adb:17:13-17:16>
  references:    <DefiningName "Foo" simple_aggregate.adb:8:13-8:16>
  type:          <ConcreteTypeDecl ["Integer"] simple_aggregate.adb:2:4-2:34>
  expected type: <ConcreteTypeDecl ["Integer"] simple_aggregate.adb:2:4-2:34>


Done.
